[package]
authors = ["Cobalt <https://cobalt.rocks>"]
edition = "2021"
license = "GPL-3-only"
name = "rotary-encoder-embedded"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/Chaostheorie/rotary-encoder.git"
homepage = "https://github.com/Chaostheorie/rotary-encoder"
description = """
# Support for Rotary Encoder with `embedded_hal`

A generic interface for a rotary encoder over [`embedded_hal`](https://github.com/rust-embedded/embedded-hal) with optional support for clickable encoders. Supports arbitrary counter length and an iterator for retrieving data continuously.

## Examples

There's an example for outputting the read values from an [esp8266](https://en.wikipedia.org/wiki/ESP8266) over [esp8266-hal](https://github.com/esp-rs/esp8266-hal). You will need to configure [espflash](https://github.com/esp-rs/espflash) and the [rust-xtensa](https://github.com/MabezDev/rust-xtensa) compiler for this example to work (Consult the [esp8266-hal instructions for setting those two up](https://github.com/esp-rs/esp8266-hal#setting-up-the-compiler)).

The example will output the current direction and rotation counter for a clickable rotation encoder over the serial connection. Additionally the onboard LED will be activated when the button on the encoder is pressed.
Pins are by default CLK -> `D7`, SW -> `D6`, DT -> `D5`. Change them as needed but keep in mind that the

To flash to your esp: `cargo +xtensa espflash --monitor --features examples --example serial-led --release <USB device>`
"""

[lib]
name = "rotary_encoder"
path = "src/rotary.rs"

[features]
examples = ["panic-halt", "esp8266-hal", "xtensa-lx-rt", "xtensa-lx"]

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
esp8266-hal = { version = "0.5", optional = true }
xtensa-lx-rt = { version = "0.7", features = ["lx106"], optional = true }
xtensa-lx = { version = "0.4", optional = true }
panic-halt = { version = "0.2", optional = true }
num-traits = { version = "0.2", default-features = false }

[[example]]
name = "serial-led"
required-features = ["examples"]
